# spheriscope

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
public/: index.html  manifest.json
spherical-autoencoder/: README.md  pyproject.toml
spherical-autoencoder/src/spherical_autoencoder/: __init__.py  cli.py  dinov2_model.py  inference.py  model.py
spheriscope-backend/: Dockerfile  main.py  requirements.txt
src/: App.jsx  utils.js
src/components/: Canvas.jsx  Point.jsx  Tooltip.jsx
