[project]
name = "spherical-autoencoder"
dynamic = ["version"]
description = "Spherical autoencoder models implemented in Keras."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{ name = "Mallory Wittwer", email = "mallory.wittwer@epfl.ch" }]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy",
    "scikit-image",
    "Pillow",
    "matplotlib",
    "tensorflow",
    "ipython",
    "ipykernel",
]

[project.urls]
homepage = "https://github.com/MalloryWittwer/spheriscope"
repository = "https://github.com/MalloryWittwer/spheriscope"

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/spherical_autoencoder/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project.scripts]
spheriscope = "spherical_autoencoder.cli:main"